--- a/style.css
+++ b/style.css
@@ -225,3 +225,73 @@ a:hover {
     z-index: -1;
     transition: 400ms ease-in-out 0s;
 }
+.menu-itens {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    transition: 400ms ease-in-out 0s;
+}
+
+.menu-itens ul {
+    list-style-type: none;
+}
+
+.menu-itens ul li a {
+    margin: 10px 0;
+    color: aqua;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 40px;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(1) {
+    transform: rotate(45deg);
+    top: 47px;
+
+}
+
+#toggle:checked + .checkbox .trace:nth-child(2) {
+    transform: translate(-225px);
+    width: 30px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(3) {
+    transform: rotate(45deg);
+    top: 48px;
+    
+}
+
+#toggle:checked + .checkbox {
+    background-color: #f8f8f8;
+}
+#toggle:checked ~ .menu {
+    box-shadow: 0px 0px 0px 100vmax #f8f8f8;
+    z-index: 1;
+}
+
+#toggle:checked ~.menu-itens {
+    visibility: visible;
+    opacity: 1;
+}
+
+/* CARDS */
+
+.container {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 3rem 0;
+}
